Update 벽지 선정 보고서.md

--- a/내부 인테리어 티켓/벽지 선정 보고서.md
+++ b/내부 인테리어 티켓/벽지 선정 보고서.md
@@ -1,4 +1,4 @@
 - 큰 방 9평, 작은 방 2개벽지가 필요한 공간
- - 6평, 계단 4평, 거실 10평, 주방 5평
-큰 방과 작은 방 (총 21평)과 계단, 거실, 주방 (총 19평)은 다른 벽지를 사용.
-18평 도배에 70만원 대, 합쳐서 총합 150만원 전후
+- 6평, 계단 4평, 거실 10평, 주방 5평
+- 큰 방과 작은 방 (총 21평)과 계단, 거실, 주방 (총 19평)은 다른 벽지를 사용.
+- 18평 도배에 70만원 대, 합쳐서 총합 150만원 전후
