Update 벽지 선정 보고서.md

--- a/내부 인테리어 티켓/벽지 선정 보고서.md
+++ b/내부 인테리어 티켓/벽지 선정 보고서.md
@@ -2,3 +2,9 @@
 - 6평, 계단 4평, 거실 10평, 주방 5평
 - 큰 방과 작은 방 (총 21평)과 계단, 거실, 주방 (총 19평)은 다른 벽지를 사용.
 - 18평 도배에 70만원 대, 합쳐서 총합 150만원 전후
+
+- 벽지를 바를 공간은 총 40평이다.
+- 다음은 가격 계산 식이다.
+- 평수 × 2 = 시공 시 소요되는 벽지의 양
+- 시공 시 소요되는 벽지의 양 ÷ 5 = 시공 시 사용되는 벽지의 롤 개수
+- 롤 개수 × 합지 가격
