--- a/내부 인테리어 티켓/벽지 선정 보고서.md
+++ b/내부 인테리어 티켓/벽지 선정 보고서.md
@@ -1,5 +1,5 @@
 - 벽지를 바를 공간은 총 40평이다.
 - 다음은 가격 계산 식이다.
-```평수 × 2 = 시공 시 소요되는 벽지의 양
+`평수 × 2 = 시공 시 소요되는 벽지의 양
 시공 시 소요되는 벽지의 양 ÷ 5 = 시공 시 사용되는 벽지의 롤 개수
-롤 개수 × 합지 가격```
+롤 개수 × 합지 가격`
