--- a/내부 인테리어 티켓/벽지 선정 보고서.md
+++ b/내부 인테리어 티켓/벽지 선정 보고서.md
@@ -1,6 +1,7 @@
-- 벽지를 바를 공간은 총 40평이다.
-- 다음은 가격 계산 식이다. (천장 포함)
-- `` 평수 × 3 = 시공 시 소요되는 벽지의 양
-시공 시 소요되는 벽지의 양 ÷ 5 = 시공 시 사용되는 벽지의 롤 개수
-롤 개수 × 합지 가격 ``
-- 40평으로 계산하면 벽지 24롤이 필요하다. 실크 벽지 롤 하나에 35000원으로 계산하면 84만원이 나온다.
+## 벽지의 종류
+- 합지 벽지
+- 실크 벽지
+- 친환경 벽지
+- 발포 벽지
+- 뮤럴 벽지
+- 페브릭 벽지
