Update 2. 벽지 도배 보고서.md

--- a/내부 인테리어 티켓/2. 벽지 도배 보고서.md
+++ b/내부 인테리어 티켓/2. 벽지 도배 보고서.md
@@ -3,5 +3,5 @@
 - `` 평수 × 3 = 시공 시 소요되는 벽지의 양
 시공 시 소요되는 벽지의 양 ÷ 5 = 시공 시 사용되는 벽지의 롤 개수
 롤 개수 × 합지 가격 ``
-- 실크 벽지는 19 * 3 / 5 = 11.4 즉 12개의 롤이 필요하다.
-- 
+- 실크 벽지는 12개의 롤이 필요하다. 80,000원 * 12개 = 96만원 (내오염성 실크)
+- 친환경 벽지는 13개의 롤이 필요하다. 90,000원 * 13 = 117만원 (친환경 합지)
