--- a/내부 인테리어 티켓/1. 벽지 선정 보고서.md
+++ b/내부 인테리어 티켓/1. 벽지 선정 보고서.md
@@ -7,5 +7,5 @@
 - 페브릭 벽지
 
 ## 선정 결과
-- 거실, 주방, 계단 같은 공용 공간은 내구성에 강한 실크 벽지로 선정했습니다.
-- 큰 방과 작은 방은 수면을 취하는 공간이기 때문에 호흡기 또는 피부 질환에 좋은 친환경 벽지로 선정 했습니다.
+- 거실, 주방, 계단 같은 공용 공간은 내구성이 좋고 오염에 강한 내오염성 실크 벽지로 선정했습니다.
+- 큰 방과 작은 방은 수면을 취하는 공간이기 때문에 호흡기 또는 피부 질환에 좋은 친환경 합지 벽지로 선정 했습니다.
