#31 보안 시스템 구축
보안 시스템 구축 수행 보고 파일

--- a/설비 수행 보고 파일/주택 보안 시스템 구축.md
+++ b/설비 수행 보고 파일/주택 보안 시스템 구축.md
@@ -3,22 +3,25 @@
 **개요**
 - 보안 시스템은 주택 보호와 거주자 안전을 위해 필수적인 요소. 다음은 2층 주택을 위한 보안 시스템 구성 계획.
 
-1. 도어록 및 창문 잠금 장치:
-- 스마트 도어록: 키 없이도 액세스할 수 있으며, 원격으로 잠금 해제 및 잠금이 가능합니다. 스마트폰 앱을 통한 관리가 가능 비용은 30만원.
+**도어락 및 창문 잠금 장치**
+- 스마트 도어락: 키 없이도 액세스할 수 있으며, 원격으로 잠금 해제 및 잠금이 가능합니다. 스마트폰 앱을 통한 관리가 가능 비용은 30만원.
 - 창문 잠금 장치: 모든 창문에 추가 보안을 위한 잠금 장치를 설치. 비용은 20만원.
-2. 경보 시스템:
+
+**경보 시스템**
 - 중앙 관제 경보 시스템: 도난, 침입, 화재에 대응하여 경보를 울리고, 필요시 경찰이나 소방서로 자동으로 신호를 보낼 수 있는 시스템. 기본 설치비와 장비비용으로 100만원, 월간 모니터링 비용이 추가로 발생할 수 있음.
-3. CCTV:
+
+**CCTV**
 - 실내외용 CCTV: 주요 출입구와 주차 공간, 주택 주변을 감시할 수 있는 고화질의 카메라를 설치. 4대의 카메라와 녹화 장비를 포함하여 약 200만원으로 예상.
-4. 연기 감지기 및 가스 누출 감지기:
+
+**연기 감지기**
 - 연기 감지기: 각 층마다 최소 한 개 이상 설치. 전체 비용은 10만원.
-- 가스 누출 감지기: 주방 및 가스가 사용되는 장소에 설치합니다. 비용은 5만원.
-5. 스마트 홈 시스템:
-- 보안 통합 관리: 스마트 홈 시스템을 통해 모든 보안 장치(도어록, CCTV, 경보 시스템 등)를 연동하여 원격으로 제어하고 모니터링할 수 있음. 시스템 구축 비용은 50만원.
+**스마트 홈 시스템**
+- 보안 통합 관리: 스마트 홈 시스템을 통해 모든 보안 장치(도어락, CCTV, 경보 시스템 등)를 연동하여 원격으로 제어하고 모니터링할 수 있음. 시스템 구축 비용은 50만원.
+
 **총 예산**
-- 도어록 및 창문 잠금 장치: 50만원
+- 도어락 및 창문 잠금 장치: 50만원
 - 중앙 관제 경보 시스템: 기본 설치 및 장비 100만원 (추가 월간 모니터링 비용 별도)
 - CCTV: 200만원
-- 연기 감지기 및 가스 누출 감지기: 15만원
+- 연기 감지기: 1만원
 - 스마트 홈 시스템: 50만원
-- 총 비용: 415만원 (월간 모니터링 비용 제외)
+- 총 비용: 410만원 (월간 모니터링 비용 제외)
