--- a/마당/1. 마당 면적.md
+++ b/마당/1. 마당 면적.md
@@ -1,1 +1,9 @@
-#15ㅡ
+1층평수46평 2층 총평수50평을 고려한 건폐율 용적률 계산
+
+제 1종 일반 주거지역은 건폐율이 60%이하 용적률이 100%~ 200% 사이여야 한다.
+용적률이 100% 이상 200%이하이고 건폐율이 60%에 가장 가까운 평수는 77평
+건폐율이 60%이하 이고 용적률 100%에 가장 가까운 평수는 96평이 된다
+
+총 대지 면적은 77평~96평이 되므로 가장 넓은 면적인 96평 선택
+
+마당의 면적은 96평에서 46평을 뺀 50평이 된다.
