--- a/마당/3. 잔디.md
+++ b/마당/3. 잔디.md
@@ -1,1 +1,10 @@
+3.잔디 
+들잔디 40cm * 60cm는 평당 13장 식재한다.
 
+시공 및 잔디 가격(행복한  화원) 
+롤잔디 전체 덮기 기준 평당 60,000원 50평이므로 3,000,000원 
+
+잔디를 설치하게 되며 잔디 훼손 방지를 위해 디딤석 설치 개당 12,300원 
+총20개 245,000원
+
+총 지출 3,246,000 
