#19 4. 잔디 관리.md
#19

--- a/마당/4. 잔디 관리.md
+++ b/마당/4. 잔디 관리.md
@@ -1,1 +1,8 @@
+4. 잔디 관리
+잔디 관리를 위해 가정용 스프링클러 구입
+한일 에스피 스프링클러를 개당12,750원에 구입 
+50평 면적 165.29 제곱미터 이므로 적정 살수 거리 15m인 스프링클러를 6개 구입
+76,500원
 
+잔디 길이 관리를 위해 잔디깎기 구매 188,700원
+총 지출 265,200원 
