--- a/마당/5.창고 설치.md
+++ b/마당/5.창고 설치.md
@@ -1,1 +1,13 @@
+마당에 필요 물품을 적재하기 위한 창고 설치
 
+이지 하우스 조립식 창고를 구매 522,900원
+
+상세 스펙 
+아연강판프레임
+
+사이즈 
+256(W) * 204(L) * 177(H)  (cm)
+
+설치비용 250,000원
+
+총 772,900원
