#21 6. 연못 제작 재료 구입.md
#21

--- a/마당/6. 연못 제작 재료 구입.md
+++ b/마당/6. 연못 제작 재료 구입.md
@@ -1,1 +1,8 @@
-
+작은 연못에는 방수포와 정수 장치와 돌들이 필요하다.
+지름이 10m인 원형 연못을 만들기 위해 20m * 20m 방수포를 188,000원에 구입
+물 순환 야외 여과기를 285,000원에 구입 
+연못의 외형을 구성할 큰 돌은 주변 산에서 구함
+연못 내부에 사용할 자갈 50kg 33,080원
+연못 내부에 사용할 모래 4.5kg 10팩 2500원 -> 25,000원
+몰탈 시멘트 40kg 11,800원 
+총 지출 542,800원
