#22 7. 연못 만들기.md
#22

--- a/마당/7. 연못 만들기.md
+++ b/마당/7. 연못 만들기.md
@@ -1,1 +1,7 @@
+연못을 만들 위치에 70cm 가량 터를 파고 바닥을 다진다.
+ 방수포를 깔고 방수포 파손을 방지 하기위해 그위에 부직포를 깐다.
+하부에 돌을 올리고 시멘트 몰탈을 한다. 
+시멘트가 마르면 상부에 돌을 쌓는다.
+모래와 자갈를 넣고 물을 채워 마무리 한다.
 
+그후 구매한 외부여과 장치를 설치한다
