#23 8. 전등 구매 및 배치.md
#23

--- a/마당/8. 전등 배치.md
+++ b/마당/8. 전등 배치.md
@@ -1,1 +1,7 @@
+야간에 원활한 이동을 위해 전등설치 
 
+태양광 전원등을 12개 1세트 190,000원을 2세트 구입
+
+마당 디딤돌을 따라 10개 배치하고 마당 휴게 공간과 화단 연못 창고 주변에 설치한다.
+
+바닥에 박는 형태이기 떄문에 간단히 시공가능
