--- a/지붕 수행 파일 보고서/[지붕] 2. 지붕 형태 시공 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 2. 지붕 형태 시공 보고서.md
@@ -1,3 +1,4 @@
+### 지붕형태 시공
 - 설계 도면상, 지붕 모양은 10도 경사의 완만하며 5계층의 계단식 구조.
 - 지붕의 재료는 아스팔트 슁글
 - 총 지붕의 면적은 x m^2 이므로 당 가격 2.5만원을 곱하여 x * 2.5 만원 소요. 총 x원 소요
