--- a/지붕 수행 파일 보고서/[지붕] 3. 옥상(지붕) 정원 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 3. 옥상(지붕) 정원 보고서.md
@@ -1,5 +1,16 @@
-### 옥상 지붕과 정원
-- 설계 도면상, 지붕 모양의 5계층 계단식 구조를 옥상 지붕 형태로 활용 가능함
+# 옥상 지붕과 정원
+
+## 설계 도면
+- 지붕 모양의 **5계층 계단식 구조**를 옥상 지붕 형태로 활용 가능함.
+- 총 **46평** 중 **40평**을 이를 위한 공간으로 활용. (남은 6평은 펜스 등의 안전장치를 위한 공간)
 - 옥상 지붕을 에코시스템을 구축한 옥상 지붕 형태로 구현
-- 5계층의 계단을 6등분하여 총 30개의 구역으로 분할
-- 10개의 공간은 인간을 위한 쉼터, 10개의 공간은 수목을 위한 공간, 나머지 10개의 공간은 태양광 패널을 설치. 
+- 5계층의 계단을 각각 8등분하여 총 **40칸**의 구역으로 분할(즉 40평이 40등분 된다는 의미)
+
+## 공간 분배
+- **20칸**의 공간은 인간을 위한 쉼터
+- **10칸**의 공간은 수목을 위한 공간
+- **10칸**의 공간은 태양광 패널을 설치.
+
+## 수목 비용
+- **코스모스**: 씨앗, 모종, 퇴비, 화분, 물뿌리개 등을 포함한 총 예상 비용은 3만원~10만원.
+- **모과나무(Malus)**: 모종, 심기, 관리 등을 포함한 총 예상 비용은 1년에 13만원~28만원.
