--- a/지붕 수행 파일 보고서/[지붕] 4. 태양광 패널 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 4. 태양광 패널 보고서.md
@@ -1,4 +1,20 @@
-- 설계 도면상, 5계층의 계단식 구조에 각각 태양광 패널을 설치
-- 태양광 패널 DIY를 위해선 전기 설비 지식 요망 
-- 재료로는 태양전지판, 태양광충전 콘트롤러, 인버터 필요
-- 개별적으로 구매 시 한 패널당 20만원 X 10 = 200 만원 소요 예상
+# 태양광 패널 구매 및 설치
+
+## 설계 도면
+설계 도면상, **5계층의 계단식 구조**에 각각 태양광 패널을 설치
+
+## DIY 요구사항
+태양광 패널 DIY를 위해선 **전기 설비 지식**이 필요함
+
+## 패널 선택
+태양광 패널에는 단결정 태양광 패널, 다결정 태양광 패널, 박막 태양광 패널이 있다. 그 중 비용이 비교적 저렴하고 효율이 잘 나오는 **다결정 태양광 패널**로 구매 결정
+
+## 필요 재료
+재료로는 **태양전지판**, **태양광충전 콘트롤러**, **인버터**가 필요
+# 태양광 패널 비용
+
+## 다결정 태양광 패널
+효율은 단결정보다 낮지만 가격이 저렴한 편으로, 1개당 약 **50만원~70만원** 소요 예상. 따라서 최소 **10x50,000=500,000원** 소요 예상
+
+## 인버터
+태양광 발전을 가정에서 사용하는 전기로 변환하는 장치로, 가격은 약 **50만원~100만원**
