--- a/지붕 수행 파일 보고서/[지붕] 8. 단열재 설치 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 8. 단열재 설치 보고서.md
@@ -1,2 +1,12 @@
-- 주택가구에서 단열은 필수적인 사항. 주로 단열은 벽을 통해 구현될 것이나 지붕 역시 단열에 필요한 요소.
-- 아스팔트 슁글은 가볍고 시공이 간편하며, 수명이 길고 방수 성능이 뛰어나지만 열과 자외선에 취약해 단열 성능이 낮음. 따라서 수목과 태양광 패널을 적절히 배치해 열과 자외선을 막아주고, 이를 역으로 이용하는 아이디어 구상.
+# 단열재 설치 
+
+단열은 주택가구에서 필수적인 사항. 주로 단열은 벽을 통해 구현되지만, 지붕 역시 단열에 필요한 요소
+
+## 현재 상황
+아스팔트 슁글은 가볍고 시공이 간편하며, 수명이 길고 방수 성능이 뛰어나지만, 열과 자외선에 취약하여 단열 성능이 낮음
+
+## 해결 아이디어
+수목과 태양광 패널을 적절히 배치하여 열과 자외선을 막아주어 단열 효과를 구현. 또한 이때 발생하는 열에너지를 전기 에너지로 이용하는 아이디어 적용
+
+## 비용
+아스팔트 슁글 비용과 수목, 태양광 패널 비용을 제외하고 비용 발생하지 않음
