--- a/지붕 수행 파일 보고서/[지붕] 10. 유지 보수 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 10. 유지 보수 보고서.md
@@ -1,3 +1,12 @@
-- 지붕은 그 특성상 외부 환경 변화에 민감하게 반응함. (가령 새의 똥이라던지, 우박 등이 떨어질 경우 상정)
-- 따라서 관리를 어떻게 하느냐가 매우 중요한 요소
-- 단독 주택일 경우 그 사용자가 꾸준히 관리하고 청소해주는 것이 매우 중요. (점검 및 유지보수를 꾸준히 해주어야함)
+# 유지 보수 
+
+지붕은 그 특성상 외부 환경 변화에 민감하게 반응한다. (가령 새의 똥이라던지, 우박 등이 떨어질 경우 상정) 따라서 관리를 어떻게 하느냐가 매우 중요한 요소임
+
+## 단독 주택 유지 보수
+특히 단독 주택일 경우(우리가 만들고자 하는) 그 사용자가 꾸준히 관리하고 청소해주는 것이 매우 중요. 점검 및 유지보수를 꾸준히 해주어나 함
+
+## 유지 보수 리스트
+유지 보수해야할 리스트로는 크게 아스팔트 슁글, LED, 잔디, 꽃, 나무, 철제 펜스, 스카이라이트가 있음. 이들을 관리하기 위해선 지속적인 비용이 발생함
+
+## 보험
+만일의 사고를 위해(태풍 등) 보험을 들어 놓는 것을 추천함
