--- a/지붕 수행 파일 보고서/[지붕] 2. 지붕 형태 시공 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 2. 지붕 형태 시공 보고서.md
@@ -1,11 +1,11 @@
 # 지붕형태시공
 
 ## 지붕 구조
-설계 도면상, 지붕 모양은 **10도 경사**의 완만하며 **5계층의 계단식 구조**이다.
+설계 도면상, 지붕 모양은 **10도 경사**의 완만하며 **5계층의 계단식 구조**
 
 ## 지붕 재료
-지붕의 재료는 **아스팔트 슁글**을 한다. 아스팔트 슁글은 한 박스당 최저 2만원, 최고 10만원의 가격을 보인다. 한 박스당 1평과 거의 비슷한 2.3㎡를 칠할 수 있다. 
+지붕의 재료는 **아스팔트 슁글**을 한다. 아스팔트 슁글은 한 박스당 최저 2만원, 최고 10만원의 가격을 보인다. 한 박스당 1평과 거의 비슷한 2.3㎡를 칠할 수 있음
 
 ## 비용 예상
-총 지붕의 면적은 46평, 즉 **152.26㎡** 이므로 152.26㎡/2.3㎡(박스) = 66.2박스가 필요하다. 따라서 **최소 67박스**가 필요하다는 계산이 나오며, 따라서 최소 67 x 20,000 = ***1,320,000만원*** 최대 67 x 10,000 = ***6,700,000만원***이 소요 예상된다.
+총 지붕의 면적은 46평, 즉 **152.26㎡** 이므로 152.26㎡/2.3㎡(박스) = 66.2박스가 필요하다. 따라서 **최소 67박스**가 필요하다는 계산이 나오며, 따라서 최소 67 x 20,000 = ***1,320,000만원*** 최대 67 x 10,000 = ***6,700,000만원***이 소요 예상 됨
 
