--- a/지붕 수행 파일 보고서/[지붕] 5. 거주자 쉼터 보고서.md
+++ b/지붕 수행 파일 보고서/[지붕] 5. 거주자 쉼터 보고서.md
@@ -1,6 +1,6 @@
 # 인간 쉼터 만들기
 
-총 **20칸(20평)**의 공간에 해먹, 테이블, 의자, 작은 램프를 설치합니다. 해먹은 2개, 테이블 2개, 의자는 8개, 램프 2개를 설치
+총 20칸(20평)의 공간에 해먹, 테이블, 의자, 작은 램프를 설치합니다. 해먹은 2개, 테이블 2개, 의자는 8개, 램프 2개를 설치
 
 ## 테마 설정
 - 편안함, 안전에 집중하여 설계. 도심 속 파라다이스 같은 느낌을 주어야 함.
